--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "electron-builder": "^26.7.0"
   },
   "dependencies": {
-    "ipfs-only-hash": "^2.0.1"
+    "ipfs-only-hash": "^2.0.1",
+    "yauzl": "^2.10.0"
   }
 }
