--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.1",
   "description": "Diamond Soul Downloader - Install AI Skills from IPFS",
   "main": "main.js",
+  "bin": {
+    "dsoul": "./bin/dsoul.js"
+  },
   "scripts": {
     "start": "electron .",
     "dev": "electron . --dev",
