--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
         "nsis",
         "portable"
       ],
-      "icon": "icon.png"
+      "icon": "icon.png",
+      "executableName": "DSoul"
     },
     "mac": {
       "target": [
