Update file paths for CLVerify assets: Changed references in index.html, renderer.js, and package.json to point to the new location of CLVerify resources. Removed obsolete files from the do_not_modify directory, ensuring cleaner project structure and improved asset management.

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
       "index.html",
       "styles.css",
       "icon.png",
-      "do_not_modify/**"
+      "Skills/clverify-2025-02-09-1/clverify/**"
     ],
     "win": {
       "target": [
