Add skills folder name input and CLI enhancements: Introduced a new input field in the options modal for specifying the skills folder name. Updated CLI commands to support a non-interactive mode for installations, allowing automatic selection of the oldest entry when multiple exist. Added new commands for packaging skill folders and freezing files, enhancing overall functionality and user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,10 @@ Desktop.ini
 .env.local
 .env.*.local
 
+# CLI test config (contains credentials)
+test.config
+.cli-test/
+
 # Electron specific
 app/dist/
 release/
