Update product name in package.json from "Diamond Soul Downloader" to "DSoul" for branding consistency.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "MIT",
   "build": {
     "appId": "com.diamondsoul.downloader",
-    "productName": "Diamond Soul Downloader",
+    "productName": "DSoul",
     "directories": {
       "output": "dist"
     },
