Add update and upgrade commands to CLI: Implemented functionality for 'update' and 'upgrade' commands, allowing users to check for and apply updates to skills. Enhanced CLI help text to include new command options and added support for global and local installations. Introduced functions for resolving post IDs and fetching upgrade graphs from the DSOUL API, improving overall user experience and functionality.

--- a/test.config.example
+++ b/test.config.example
@@ -10,3 +10,5 @@ token=
 
 # DSOUL API host (optional; default https://dsoul.org)
 # dsoul_provider=https://dsoul.org
+
+history_test=QmZTJS5PJYjMCcwDMCKHaiT9CdZ697Y7eTZRPbnVmtdZNU
