Refactor CLI argument parsing: Updated the command-line argument handling to accommodate packaged applications, adjusting index references for commands and arguments. Enhanced the 'getCliArgs' function for improved clarity and consistency. Added a new script command for building Linux distributions in WSL.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dist:win": "electron-builder --win && npm run cleanup:dist",
     "dist:mac": "electron-builder --mac && npm run cleanup:dist",
     "dist:linux": "electron-builder --linux && npm run cleanup:dist",
+    "dist:linux:wsl": "wsl bash -l -c \"cd \\\"$(wslpath '%cd%')\\\" && npm run dist:linux\"",
     "cleanup:dist": "node scripts/cleanup-dist.js",
     "test:cli": "node scripts/test-cli.js"
   },
